5.9.161 (2012-05-09)
	- A bug on XREF table was fixed (Bug ID: 3525051).

5.9.160 (2012-05-03)
	- A bug on tcpdf_parser.php was fixed.

5.9.159 (2012-04-30)
	- Barcode classes were updated to fix PNG export Bug (ID: 3522291).

5.9.158 (2012-04-22)
	- Some SVG-related bugs were fixed.

5.9.157 (2012-04-16)
	- Some SVG-related bugs were fixed.

5.9.156 (2012-04-10)
	- Bug item #3515885 "TOC and booklet: left and right page exchanged".
	- SetAutoPageBreak(false) now works also in multicolumn mode.

5.9.155 (2012-04-02)
	- Bug item #3512596 "font import problems" was fixed.
	- Method addTTFfont() was modified to extract only specified Platform ID and Encoding ID (check the source code documentation).
	- All fonts were updated.
	- Bug item #3513867 "booklet and setHeaderTemplateAutoreset: header shifted left" was fixed.
	- Bug item #3513749 "TCPDF Superscript/Subscript" was fixed.

5.9.154 (2012-03-29)
	- A debug echo was removed.

5.9.153 (2012-03-28)
	- A bug on font conversion was fixed.
	- All fonts were updated.
	- Method isCharDefined() was added to find if a character is defined on the selected font.
	- Method replaceMissingChars() was added to automatically replace missing chars on selected font.
	- SetFont() method was fixed.

5.9.152 (2012-03-23)
	- The following overprint methods were added: setOverprint(), getOverprint().
	- Signature of setAlpha() method was changed and method getAlpha() was added.
	- stroke-opacity support was added on SVG.
	- The following date methods were added: setDocCreationTimestamp(), setDocModificationTimestamp(), getDocCreationTimestamp(), getDocModificationTimestamp(), getFormattedDate(), getTimestamp().
	- Signature of _datestring() method was changed.
	- Method getFontBBox() was added.
	- Method setPageBoxTypes() was aded.

5.9.151 (2012-03-22)
	- Bug item #3509889 "Transform() distorts PDF" was fixed.
	- Precision of real number were extended.
	- ComboBox and ListBox methods were fixed.
	- Bulgarian language file was added.